--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+header {
+  font-family: "Shrikhand", cursive;
+  padding: 10px;
+  box-shadow: grey 0 0 10px;
+}
+header h1 {
+  text-align: center;
+  margin: 0;
+}
 
+body {
+  margin: 0;
+}
 
 /*# sourceMappingURL=style.css.map */
