--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "utils/variables";
 @import "components/header";
+@import "components/buttons";
 body {
   margin: 0;
+  font-family: $font-content;
 }
