--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 // COLOR
 $color-primary : #9356DC;
-$color-secondary : #FF79D;
+$color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
 // FONT
 $font-content : 'Roboto', sans-serif;
