Add button box shadow

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,6 @@ $color-tertiary : #99E2D0;
 // FONT
 $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
+// BOX SHADOW
+$box-shad-color : #b6b6b6;
+$box-shad-content : $box-shad-color 0 4px 10px;
