--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,4 +7,4 @@ $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
 // BOX SHADOW
 $box-shad-color : #b6b6b6;
-$box-shad-content : $box-shad-color 0 4px 10px;
+$box-shad-content : $box-shad-color 0 px 10px;
