--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 header {
+  position: relative;
   font-family: "Shrikhand", cursive;
   padding: 10px;
   box-shadow: grey 0 0 10px;
@@ -17,12 +18,23 @@ header h1 {
   border-radius: 25px;
   padding: 12px 20px;
   margin: 10px auto;
-  box-shadow: #b6b6b6 0 4px 10px;
+  box-shadow: #b6b6b6 0 0 10px;
 }
 
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+}
+
+.location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e5e5e5;
+}
+.location p {
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
