--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,9 @@ header h1 {
   font-weight: 600;
   border: none;
   border-radius: 25px;
-  padding: 12px 20px;
+  padding: 12px 25px;
   margin: 10px auto;
+  font-size: 15px;
   box-shadow: #b6b6b6 0 0 10px;
 }
 
@@ -35,6 +36,20 @@ body {
 }
 .location p {
   margin-left: 20px;
+}
+
+.description {
+  background-color: #efefef;
+  padding: 50px;
+  text-align: center;
+}
+.description h2 {
+  margin: 0;
+  font-size: 30px;
+}
+.description p {
+  font-weight: 300;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
