--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,16 @@ body {
     margin-left: 20px;
   }
 }
+.description {
+  background-color: #efefef;
+  padding: 50px;
+  text-align: center;
+  h2{
+    margin: 0;
+    font-size: 30px;
+  }
+  p{
+    font-weight: 300;
+    font-size: 20px;
+  }
+}
