--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,6 +8,6 @@
   padding: 12px 25px;
   margin: 10px auto;
   font-size: 15px;
-  box-shadow: $box-shad-content;
+  box-shadow: $box-shad-button;
 }
 
