--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,9 +2,10 @@
 $color-primary : #9356DC;
 $color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
+$color-bg : #efefef;
 // FONT
 $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
 // BOX SHADOW
-$box-shad-color : #b6b6b6;
-$box-shad-content : $box-shad-color 0 px 10px;
+$box-shad-button : #919191 0 3px 10px;
+$box-shad-content : #dadada 0 5px 10px;
