Functioning active and start restaurant html

--- a/sass/components/_functioning.scss
+++ b/sass/components/_functioning.scss
@@ -3,26 +3,31 @@
   &__card {
     position: relative;
     background-color: $color-bg;
-    padding: 30px;
-    margin: 10px 0 20px 20px;
+    padding: 25px 30px;
+    margin: 10px 0 20px 10px;
     box-shadow: $box-shad-content;
     border-radius: 20px;
-
     i {
       color: grey;
       font-size: 18px;
       margin-right: 20px;
     }
-
     &__index {
       position: absolute;
       background-color: $color-primary;
       color: white;
-      padding: 2px 7px;
-      border-radius: 20px;
+      padding: 3px 8px;
+      border-radius: 25px;
       left: -13px;
       top: 50%;
       transform: translateY(-50%);
+      font-size: 15px;
+    }
+    &--active {
+      background-color: lighten($color-primary,35%);
+      i{
+        color: $color-primary;
+      }
     }
   }
 }
