--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,5 +7,5 @@ $color-bg : #efefef;
 $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
 // BOX SHADOW
-$box-shad-button : #919191 0 3px 10px;
+$box-shad-button : #a6a6a6 0 3px 10px;
 $box-shad-content : #dadada 0 5px 10px;
