--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,17 @@ header h1 {
   font-weight: 600;
   border: none;
   border-radius: 25px;
-  padding: 12px 25px;
+  padding: 15px 25px;
   margin: 10px auto;
   font-size: 15px;
-  box-shadow: #919191 0 3px 10px;
+  box-shadow: #a6a6a6 0 3px 10px;
 }
 
 .functioning__card {
   position: relative;
   background-color: #efefef;
-  padding: 30px;
-  margin: 10px 0 20px 20px;
+  padding: 25px 30px;
+  margin: 10px 0 20px 10px;
   box-shadow: #dadada 0 5px 10px;
   border-radius: 20px;
 }
@@ -39,11 +39,18 @@ header h1 {
   position: absolute;
   background-color: #9356DC;
   color: white;
-  padding: 2px 7px;
-  border-radius: 20px;
+  padding: 3px 8px;
+  border-radius: 25px;
   left: -13px;
   top: 50%;
   transform: translateY(-50%);
+  font-size: 15px;
+}
+.functioning__card--active {
+  background-color: #f2eafb;
+}
+.functioning__card--active i {
+  color: #9356DC;
 }
 
 body {
