--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "components/header";
+@import "components/footer";
 @import "components/buttons";
 @import "components/functioning";
 @import "components/restaurant";
