--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $color-primary : #9356DC;
 $color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
 $color-bg : #efefef;
+$color-footer : #414141;
 // FONT
 $font-content : 'Roboto', sans-serif;
 $font-title :'Shrikhand', cursive;
