--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,10 @@ body {
   font-family: $font-content;
   box-sizing: border-box;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 h3 {
   font-size: 25px;
   font-weight: 600;
