--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,4 @@
-header{
+.header{
   position: relative;
   font-family: $font-title;
   padding: 10px;
@@ -6,5 +6,13 @@ header{
   h1 {
     text-align: center;
     margin: 0;
+  }
+  i{
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    font-size: 20px;
+    transform: translateY(-50%);
+
   }
 }
