--- a/css/style.css
+++ b/css/style.css
@@ -192,4 +192,25 @@ h3 {
   font-size: 20px;
 }
 
+.presentation__img {
+  height: 300px;
+  background-color: #b2b2b2;
+}
+
+.detail__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 10px 40px 10px 30px;
+  margin-top: -50px;
+  border-radius: 50px;
+}
+.detail__title h2 {
+  font-family: "Shrikhand", cursive;
+}
+.detail__title i {
+  font-size: 25px;
+}
+
 /*# sourceMappingURL=style.css.map */
