--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@
   position: relative;
   font-size: 17px;
   font-weight: 300;
-  margin: 0;
+  margin: 0 0 20px 5px;
 }
 .menu h3::after {
   content: "";
@@ -206,6 +206,9 @@ h3 {
 
 .content--padding {
   padding: 20px 20px 50px;
+}
+.content--padding--soft {
+  padding: 20px 20px 10px 20px;
 }
 
 .background--color {
