--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,7 +3,8 @@
     position: relative;
     font-size: 17px;
     font-weight: 300;
-    margin: 0;
+    margin: 0 0 20px 5px;
+
     &::after {
       content: "";
       position: absolute;
