--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,6 @@ h3 {
   padding: 20px 20px 10px 20px;
 }
 
-.background--color {
-  background-color: #efefef;
-}
-
 .location {
   display: flex;
   justify-content: center;
@@ -239,6 +235,12 @@ h3 {
   font-size: 20px;
 }
 
+.detail {
+  background-color: #efefef;
+  border-radius: 50px 50px 0 0;
+  padding-bottom: 60px;
+}
+
 .presentation__img {
   height: 300px;
   background-color: #b2b2b2;
@@ -248,7 +250,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #efefef;
   padding: 10px 45px 0 20px;
   margin-top: -50px;
   border-radius: 50px 50px 0 0;
