--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,9 +25,6 @@ h3 {
     padding: 20px 20px 10px 20px;
   }
 }
-.background--color {
-  background-color: $color-bg;
-}
 
 // Location
 .location {
@@ -59,6 +56,11 @@ h3 {
 }
 
 // Detail
+.detail {
+  background-color: $color-bg;
+  border-radius: 50px 50px 0 0;
+  padding-bottom: 60px;
+}
 .presentation__img {
   height: 300px;
   background-color: #b2b2b2;
@@ -67,7 +69,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $color-bg;
   padding: 10px 45px 0 20px;
   margin-top: -50px;
   border-radius: 50px 50px 0 0 ;
