--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -20,6 +20,7 @@
   background-color: white;
   padding: 10px;
   border-radius: 15px;
+  font-size: 18px;
   box-shadow: $box-shad-content;
   margin: 15px 0;
   p{
