--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,8 +5,9 @@
   font-weight: 600;
   border: none;
   border-radius: 25px;
-  padding: 15px 25px;
+  padding: 15px 0;
   margin: 10px auto;
+  width: 240px;
   font-size: 15px;
   box-shadow: $box-shad-button;
 }
