--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,3 +10,5 @@ $font-title :'Shrikhand', cursive;
 // BOX SHADOW
 $box-shad-button : #a6a6a6 0 3px 10px;
 $box-shad-content : #dadada 0 5px 10px;
+// SHADE-IN ANIMATION NUMBER OF CARD
+$num-cards : 10;
