--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,6 +26,29 @@ h3 {
   }
 }
 
+// heart animation hover
+.fa-heart {
+  position: relative;
+  font-size: 25px;
+  transition: color .2s;
+  &.fa-solid{
+    position: absolute;
+    inset: 0;
+    color:$color-primary;
+    opacity: 0;
+    transition: opacity .2s;
+  }
+  &.fa-regular {
+    &:hover {
+      color: white;
+      .fa-solid{
+        opacity: 1;
+      }
+    }
+  }
+
+}
+
 // Location
 .location {
   display: flex;
