--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,5 +10,11 @@
   width: 220px;
   font-size: 15px;
   box-shadow: $box-shad-button;
+  transition: all .2s;
+  cursor: pointer;
+  &:hover {
+    background: linear-gradient(to top left, lighten($color-primary, 8%) , lighten($color-secondary, 8%));
+    box-shadow: $box-shad-button-hover;
+  }
 }
 
